--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <!-- HEADER -->
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo" />
@@ -28,18 +29,38 @@
         <a href="" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
-
+    <!-- SECTION ABOUT -->
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
         </div>
 
         <div class="row">
-          <div class="col-1-of-2">text</div>
-          <div class="col-1-of-2">Image</div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+              suscipit error iure illum unde qui! Dignissimos eveniet ipsum quod
+              dolorem corporis est! Accusantium non totam.
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you have never before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+              dolore, illo, impedit doloribus magni nam odit dolores beatae,
+              repudiandae perferendis ea
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+
+          <div class="col-1-of-2"></div>
         </div>
       </section>
     </main>
