--- a/index.html
+++ b/index.html
@@ -152,7 +152,15 @@
                     >The Sea Explorer</span
                   >
                 </h4>
-                <div class="card__details">details</div>
+                <div class="card__details">
+                  <ul>
+                    <li>3 days tour</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficulty: very easy</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
                 BACK
