--- a/index.html
+++ b/index.html
@@ -246,6 +246,13 @@
       </section>
       <!-- SECTION STORIES -->
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported!
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
@@ -267,9 +274,40 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Quibusdam suscipit error iure illum unde qui! Dignissimos
                 eveniet ipsum quod dolorem corporis est! Accusantium non totam.
+                Quibusdam suscipit error iure illum unde qui! Dignissimos
+                eveniet ipsum quod dolorem corporis est! Accusantium non totam.
               </p>
             </div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quibusdam suscipit error iure illum unde qui! Dignissimos
+                eveniet ipsum quod dolorem corporis est! Accusantium non totam.
+                Quibusdam suscipit error iure illum unde qui! Dignissimos
+                eveniet ipsum quod dolorem corporis est! Accusantium non totam.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
